# dpdk

./: .mailmap  Cargo.toml
buildtools/rust/: build.rs  lib.rs  wrapper.c
doc/guides/rel_notes/: release_25_03.rst
drivers/net/intel/idpf/: meson.build
dts/framework/remote_session/: testpmd_shell.py
kernel/freebsd/contigmem/: contigmem.c
